# asmbf

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  BITOP  INSTALL  LEGAL  LICENSE  Makefile  Makefile.in  NEWS  README  README.md  TODO  VERSIONING  adv-cond.asm  ansi-art.ans  article.txt  asprintf.h  autoconf.ac  bconv.bck  bconv.c  bconv.doc  bfasm-experimental.c  bfasm-orig.c  bfasm-prebuilt.b  bfasm.asm  bfasm.b  bfasm.bck  bfasm.c  bfasm.doc  bfasm.rs  bfasmapi.c  bfasmapi.h  bfdata.lex  bfderle.c  bfi-rle  bfi.bck  bfi.c  bfintd.c  (+53 more)
.github/workflows/: stale.yml
attic/: README  encrypt.pl  notebook1.aes  notebooksigsub.aes
b2bf/: b2bf.py
b2bf/examples/: fcc.b  fib.b  sierpinski.b
b2bf/include/: ctype.h  stdio.h  stdlib.h  string.h
bfadbg/: Makefile.in  bfadbg.c  bfadbg.h  bp.c  bp.h  buffer.c  buffer.h  help.c  help.h  int.c  int.h  status.c  status.h  tui.c  tui.h
bfasm-examples/: count.asm  hello.asm  malbolge.asm  malbolge.b
bfpp/: Makefile  Makefile.in  entry.c
doc/: bconv.doc  bfasm.bck  bfasm.doc  bfasmapi.doc  bfi-rle.doc  bfi.doc  bfintd.bck  bfpp.doc  derle.doc  strip.doc  wiki-article.doc
etc/: article.txt  bfasm.b  bfasm.rs  incunabulum.c  signedmath.asm  xlt.uc
examples/: 8ball.asm  api_example.c  bitness.asm  bitness.b  count.asm  example-lib.asm  example-program.asm  harmonic.asm  hello.asm  hello_fancy.asm  hello_tiny.asm  malbolge.asm  music.asm  semihash.asm  sierpinski.asm  sk.asm  tiny_sk.asm  tiny_sk.b  yes.asm
experimental/: disasm.java
hacking/: bfdata.c  bflabels.c  constpp.c  effective.c  vxcall.c
hla/: Makefile  Makefile.in  codegen.c  emitter.c  hla-test  lexer.h  lexer.l  main.c  modq.c  modq.h  node.c  node.h  parser.y  symtab.c  symtab.h  test1.hla
ide/: README
ide/src/: bfstudio.py
legacy/gisa/: .gitignore  LICENSE  README.md  gisapp
legacy/gisa/examples/: arith.la  defun.la  loop.la  macro.la
legacy/gisa/gisac/: gisac.c  lexer.c  lexer.h  parser.c  parser.h
legacy/json-formatter/: README.md  jsonformat.cgi  jsonformatter.asm  urldecode.asm
lib-bfm/: lib-bfm-stub.lua  lib-bfm-stub.lua.in  lib-bfm.lua  lib-bfm.lua.in  lib-def.lua
libasmbf/: and.asm  isspace.asm  puts.asm
linear-opt/: COPYRIGHT
linear-opt/src/: Main.java
linear-opt/src/lba/io/: MemoryOptimizer.java  Pointer.java  Tuple.java
linear-opt/src/lba/op/: BalancedOperation.java  ByteIn.java  ByteOut.java  GroupableOperation.java  LoopEndMarker.java  Minus.java  NoOp.java  Operation.java  Plus.java  PtrLeft.java  PtrRight.java
microcode/: bconv.c  bfasm-instructions.c  bfvm-prelude.h.in  bfvm.c  bfvm_runtime.h  emit-bf.c  emit-bfvm.c
preprocessor/: Makefile.in  bfdata.lex  bflabels.lex  constpp.lex  effective.lex  vector.h  vxcall.lex
rave/: .gitignore  .project  build.xml
rave/src/rave/: ASTSerializer.java  CodeRunner.java  Interpreter.java  PerformanceCounter.java  Rave.java
rave/src/rave/common/: Automata.java  ConstructBuilder.java  DirectionHelper.java  INode.java  IPass.java  PatternParser.java  Pointer.java
rave/src/rave/construct/: Clear.java  Comparator.java  MultiplyLoop.java  RCL.java  SimpleUnbalLoop.java  StackPop.java  StackPush.java  StackRV.java  StackRet.java  WithoutSettings.java
rave/src/rave/construct/primitive/: BracketLeft.java  BracketNode.java  BracketRight.java  Comma.java  Dot.java  Minus.java  Plus.java  PtrLeft.java  PtrRight.java
rave/src/rave/nodes/: CoefficientalNode.java  INode.java  MorphableNode.java  WithoutCoefficients.java  WithoutSettings.java
rave/src/rave/pass/: ClearFinderPass.java  ComparisonPass.java  IPass.java  InitPass.java  MinusMergePass.java  MultiplyLoopPass.java  PlusMergePass.java  PopPass.java  PtrLeftMergePass.java  PtrRightMergePass.java  PushPass.java  RCLPass.java  RetPass.java  SRVPass.java  SimpleUnbalLoopPass.java
rcc/: Makefile.in  emitter.h  lexer.l  main.c  node.c  node.h  parser.y  symtab.h  test1.hla
redpower/: Makefile  docs.txt  memory_map.txt  redpower.asm  redpower.img
redpower/boot/: interpreter.hex
redpower/drivers/: bios_driver.lua
redpower/kernel/: kernel.asm  kernel.b  kernel.p
subst/: README  subst
test/: abs.asm  adress.asm  adress.out  adv-cond.b  adv-cond.in  ama.asm  amp.asm  amp.b  amp.out  bfstrip-garbage.asm  bitwidth-invalid-default.asm  bitwidth-invalid-set.asm  bitwidth-within-default.asm  bitwidth-within-set.asm  bitwidth.asm  bitwidth32.asm  bug-000.asm  bug-000.in  bug-000.out  bug001.asm  cam-csm.asm  cam-csm.b  ceq-cmv.asm  ceq-cmv.b  cge-cpw-cad.asm  cge-cpw-cad.b  cgt-csl-csr-csu.asm  cgt-csl-csr-csu.b  cle-csw.asm  cle-csw.b  clt-cmu-cmd-j.asm  clt-cmu-cmd-j.b  cne-cflip.asm  cne-cflip.b  cne-cps-crv-cpo.asm  cne-cps-crv-cpo.b  constpp-leading-wsp.asm  counter.asm  cout.asm  cout.b  (+137 more)
